code along with Reddit Clone

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--Made by Henry Kaufman-->
+<!--Org code by Henry Kaufman-->
 <!doctype html>
 <html ng-app="reddit-clone">
 
@@ -22,7 +22,7 @@
 
 <body style="width: 80%; margin: 0 auto">
     <!--    Header text-->
-    <h1 class="text-center">The Best Reddit Clone</h1>
+    <h1 class="text-center">Reddit Clone</h1>
     <!--    The ng-view that displays the URL rerouting-->
     <div ng-view></div>
 </body>
